Added virtuoso ver

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^5.2.0",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-virtuoso": "^2.17.2"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
